--- a/.github/workflows/ak_develop.yml
+++ b/.github/workflows/ak_develop.yml
@@ -20,13 +20,20 @@ jobs:
                     # For posting a rich message using Block Kit
                 payload: |
                     {
-                        "text": "GitHub Action build result: ${{ job.status }}\n${{ github.event.pull_request.html_url }}",
+                        "text": "**${{ github.repository }}** has been deployed by ${{ github.event.commit.committer.name }}! :tada: :rocket: :tada: \n",
                         "blocks": [
                         {
                             "type": "section",
                             "text": {
                             "type": "mrkdwn",
-                            "text": "GitHub Action build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
+                            "text": "**Deployment result** \n ${{ job.status }}"
+                            }
+                        },
+                        {
+                            "type": "section",
+                            "text": {
+                            "type": "mrkdwn",
+                            "text": "**Commit** \n [\'${{ github.event.commit.message.split('\n')[0] }}\'](https://github.com/${{ github.repository }}/commit/${{ github.sha }})"
                             }
                         }
                         ]
