--- a/.github/workflows/ak_develop.yml
+++ b/.github/workflows/ak_develop.yml
@@ -1,48 +1,73 @@
-name: Deploy AK Develop
+name: "AK Develop"
+
 on:
   push:
     branches:
       - new-pipeline
+
 jobs:
-    upload-and-notify:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v4
+  deploy:
+    runs-on: ubuntu-latest
 
-            - name: Get first line of commit message
-              id: commit_message
-              run: |
-                echo "COMMIT_MESSAGE_FIRST_LINE=$(git log -1 --pretty=%B | head -n 1)" >> $GITHUB_ENV
-                echo "::set-output name=first_line::$(git log -1 --pretty=%B | head -n 1)"
+    steps:
+      # 1) Check out code so we can access the files in this repository
+      - name: Check out code
+        uses: actions/checkout@v4
 
-            - name: Post to a Slack channel
-              id: slack
-              uses: slackapi/slack-github-action@v1.25.0
-              with:
-                # Slack channel id, channel name, or user id to post message.
-                # See also: https://api.slack.com/methods/chat.postMessage#channels
-                channel-id: 'CHZ9289JR'
-                    # For posting a rich message using Block Kit
-                payload: |
+      # 2) Configure AWS Credentials
+      # The AWS_ACCESS_KEY_ID, AWS_SECRET_ACCESS_KEY, and AWS_REGION must be set as GitHub Secrets in your repo
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }} # e.g. 'us-east-1'
+
+      # 3) Upload assets to S3
+      - name: Upload 'assets' to S3
+        run: |
+          # Sync local 'assets' directory to s3://s3.350.org/ak-dev
+          aws s3 sync assets s3://s3.350.org/ak-dev --acl private
+
+      # 4) Invalidate the CloudFront cache
+      - name: Invalidate CloudFront Cache
+        run: |
+          aws cloudfront create-invalidation \
+            --distribution-id E1A2162YKWCD00 \
+            --paths "/*"
+
+      # 5) Send Slack notification
+      # We'll use slackapi/slack-github-action for convenience
+      - name: Notify Slack Channel with Blocks
+        uses: slackapi/slack-github-action@v1.23.0
+        with:
+          channel-id: ${{ secrets.SLACK_CHANNEL_ID }}
+          payload: >
+            {
+              "text": "${{ github.actor }} just deployed a build!",
+              "blocks": [
+                {
+                  "type": "section",
+                  "fields": [
                     {
-                        "text": "*${{ github.repository }}* has been deployed by ${{ github.event.commit.committer.name }}! :tada: :rocket: :tada: \n",
-                        "blocks": [
-                        {
-                            "type": "section",
-                            "text": {
-                            "type": "mrkdwn",
-                            "text": "*Deployment result* \n ${{ job.status }}"
-                            }
-                        },
-                        {
-                            "type": "section",
-                            "text": {
-                            "type": "mrkdwn",
-                            "text": "*Commit* \n ['${{ steps.commit_message.outputs.first_line }}'](https://github.com/${{ github.repository }}/commit/${{ github.sha }})"
-                            }
-                        }
-                        ]
+                      "type": "mrkdwn",
+                      "text": "*Successful execution:* <${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}|Run #${{ github.run_id }}>"
+                    },
+                    {
+                      "type": "mrkdwn",
+                      "text": "*Pipeline:* AK Develop"
+                    },
+                    {
+                      "type": "mrkdwn",
+                      "text": "*Branch:* ${{ github.ref_name }}"
+                    },
+                    {
+                      "type": "mrkdwn",
+                      "text": "*Project:* ${{ github.event.repository.name }}"
                     }
-              env:
-                SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+                  ]
+                }
+              ]
+            }
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
