feat(ci): add GitHub Actions workflow for master branch deployment
This commit introduces a new GitHub Actions workflow to replace the
Buddy.works pipeline for deploying assets from the master branch.

### Changes:
- Uploads `assets/` to `s3://s3.350.org/ak/` with public read access.
- Invalidates CloudFront cache (`E1A2162YKWCD00`).
- Sends Slack notifications on successful deployments.
- Sends Slack alerts when the deployment fails.

This ensures deployments are automated and notifications are properly
handled.

--- a/.github/workflows/ak_master.yml
+++ b/.github/workflows/ak_master.yml
@@ -20,7 +20,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Upload 'assets' to S3 with Public Access
+      - name: Upload 'assets/' to S3 with Public Access
         run: |
           aws s3 sync assets/ s3://s3.350.org/ak/ --acl public-read
 
