--- a/.github/workflows/ak_master.yml
+++ b/.github/workflows/ak_master.yml
@@ -32,85 +32,28 @@ jobs:
 
   notify_success:
     needs: deploy
-    if: ${{ success() }}
+    if: ${{ needs.deploy.result == 'success' }}
     runs-on: ubuntu-latest
 
     steps:
       - name: Send Slack notification on success
-        uses: slackapi/slack-github-action@v1.23.0
+        uses: 8398a7/action-slack@v3
         with:
-          channel-id: ${{ secrets.SLACK_CHANNEL_ID }}
-          payload: |
-            {
-              "text": "*${{ github.event.repository.name }}* has been deployed by *${{ github.actor }}*! 🚀",
-              "attachments": [
-                {
-                  "fallback": "Deployment successful",
-                  "color": "good",
-                  "fields": [
-                    {
-                      "title": "Commit",
-                      "value": "<https://github.com/${{ github.repository }}/commit/${{ github.sha }}|${{ github.event.head_commit.message }}>",
-                      "short": true
-                    },
-                    {
-                      "title": "Pipeline",
-                      "value": "<${{ github.server_url }}/${{ github.repository }}/actions|Deploy Master Assets>",
-                      "short": true
-                    },
-                    {
-                      "title": "Branch",
-                      "value": "${{ github.ref_name }}",
-                      "short": true
-                    },
-                    {
-                      "title": "Project",
-                      "value": "<${{ github.server_url }}/${{ github.repository }}|${{ github.event.repository.name }}>",
-                      "short": true
-                    }
-                  ]
-                }
-              ]
-            }
+          status: success
+          fields: repo,commit,author,action
         env:
-          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
 
   notify_failure:
     needs: deploy
-    if: ${{ failure() }}
+    if: ${{ needs.deploy.result == 'failure' }}
     runs-on: ubuntu-latest
 
     steps:
       - name: Send Slack notification on failure
-        uses: slackapi/slack-github-action@v1.23.0
+        uses: 8398a7/action-slack@v3
         with:
-          channel-id: ${{ secrets.SLACK_CHANNEL_ID }}
-          payload: |
-            {
-              "text": "[#${{ github.run_id }}] Deployment failed",
-              "blocks": [
-                {
-                  "type": "section",
-                  "fields": [
-                    {
-                      "type": "mrkdwn",
-                      "text": "*Failed execution:* <${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}|Execution #${{ github.run_id }}>"
-                    },
-                    {
-                      "type": "mrkdwn",
-                      "text": "*Pipeline:* <${{ github.server_url }}/${{ github.repository }}/actions|Deploy Master Assets>"
-                    },
-                    {
-                      "type": "mrkdwn",
-                      "text": "*Branch:* ${{ github.ref_name }}"
-                    },
-                    {
-                      "type": "mrkdwn",
-                      "text": "*Project:* <${{ github.server_url }}/${{ github.repository }}|${{ github.event.repository.name }}>"
-                    }
-                  ]
-                }
-              ]
-            }
+          status: failure
+          fields: repo,commit,author,action
         env:
-          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
